--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "request": "^2.75.0",
     "should": "^7.1.0",
     "supertest": "^1.0.0"
   },
